# notebooklm-mcp-dashboard

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  start-dashboard.bat  start-dashboard.ps1  start-dashboard.sh
backend/: pyproject.toml
backend/src/app/: config.py  dependencies.py  main.py
backend/src/app/routers/: auth.py  notebooks.py  settings.py  sources.py  studio.py
backend/src/app/schemas/: notebooks.py  settings.py  studio.py
backend/src/app/services/: notebook_service.py  settings_service.py  studio_service.py
docs/: NOTEBOOKLM_MCP_REFERENCE.md  NOTEBOOKLM_MCP_REFERENCE_EN.md  README.md
docs/imgs/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  notebooks.ts  sources.ts  studio.ts
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/notebooks/: BulkActionsBar.tsx  CleanupSuggestions.tsx  CreateNotebookDialog.tsx  NotebookCard.tsx  NotebookList.tsx  NotebookListItem.tsx  NotebookQueryPanel.tsx  NotebookRow.tsx  NotebookToolbar.tsx  UsageDisplay.tsx
frontend/src/contexts/: LanguageContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useAutoRefresh.ts  useBulkSelect.ts  useNotebooks.ts  useSources.ts  useStudio.ts
frontend/src/i18n/: translations.ts
frontend/src/pages/: NotebookDetailPage.tsx  NotebooksPage.tsx
frontend/src/types/: notebook.ts  studio.ts
frontend/src/utils/: constants.ts  formatters.ts
notebooklm-mcp/: SKILL.md
notebooklm-mcp/references/: cli_commands.md  mcp_tools.md
(+14 files in other folders)
