[project]
name = "notebooklm-mcp-dashboard-backend"
version = "0.1.0"
description = "Backend API for the NotebookLM MCP Dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "notebooklm-mcp-cli>=0.4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
